--- a/app/views/users/signup.jade
+++ b/app/views/users/signup.jade
@@ -20,6 +20,5 @@ block auth
 
     .control-group
       button.btn.btn-primary(type='submit') Sign up
-      &nbsp;
-      | or&nbsp;
+      |&nbsp;or&nbsp;
       a.show-login(href="/signin") login
